fix more findbugs